--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <script src="http://localhost:8080/webpack-dev-server.js"></script>
 </head>
 <body>
-  <script src="app.js"></script>
+  <div id="root"></div>
+  <script src="index.js"></script>
 </body>
 </html>
